[package]
name = "rust_webserver_example1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4.0"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "mysql"] }
jsonwebtoken = "7.0"
bcrypt = "0.10"
serde = { version = "1.0.196", features = ["derive"] }






